# cyberz

./: .env.example  .gitignore  .hadolint.yaml  .kics.yml  .semgrep.yml  .trivyignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  agents.py  config.py  crew.py  docker-compose.yml  install-tools.sh  litellm_config.yml  main.py  mcp_servers.py  models.py  pyproject.toml  runtime.py  tasks.py  tui.py  tui.tcss
.claude/: settings.json
.claude/hooks/: git-guard.sh  load-skill.sh  session-start.sh
.claude/skills/cybersquad-agent-llm/: SKILL.md
.claude/skills/cybersquad-bdd/: SKILL.md
.claude/skills/cybersquad-change-discipline/: SKILL.md
.claude/skills/cybersquad-conventions/: SKILL.md
.claude/skills/cybersquad-mcp/: SKILL.md
.claude/skills/cybersquad-models/: SKILL.md
.claude/skills/cybersquad-pentest-tool/: SKILL.md
.claude/skills/cybersquad-prompteng/: SKILL.md
.claude/skills/cybersquad-runtime/: SKILL.md
.claude/skills/cybersquad-skill/: SKILL.md
.claude/skills/cybersquad-task/: SKILL.md
.claude/skills/cybersquad-test-fixtures/: SKILL.md
.claude/skills/cybersquad-tool/: SKILL.md
.github/workflows/: ci.yml
data/wordlists/: common.txt
docs/: academic-grounding.md  architecture.md  ci.md  git-workflow.md  testing.md
docs/contributing/: adding-a-tool.md  adding-an-agent.md  adding-config.md
mcp_servers/: __init__.py  _common.py  _playwright.py  _time.py
models/: __init__.py  asset.py  attack.py  briefing.py  cloud.py  cve.py  cwe.py  dns.py  finding.py  framework.py  h1.py  insight.py  metrics.py  network.py  owasp.py  primitives.py  report.py  scanner.py  service.py  technology.py  triage.py  workspace.py
models/asset/: __init__.py  certificate.py  contact.py  endpoint.py  graph.py  host.py  identifier.py  ip.py  network.py  org.py  people.py  property.py  registration.py  relation.py  service.py  url.py  vuln.py
models/attack/: __init__.py  forest.py  graph.py  tree.py
models/mitre/: __init__.py  cwe.py  cwe_id.py
models/nvd/: __init__.py  cve.py  cvss.py  severity.py
models/primitives/: __init__.py  cidr.py  email.py  fqdn.py  http_url.py  ip_addr.py  ip_type.py
prompts/: disclosure-coordinator.md  osint-analyst.md  penetration-tester.md  programme-manager.md  technical-author.md  vulnerability-researcher.md
proposals/: dockerised-infra.md  pr-agent-and-disclosure.md
squad/: __init__.py  workspace_tools.py
squad/disclosure_coordinator/: __init__.py  agent.md  backstory.md  description.md  expected_output.md  goal.md  role.md
squad/osint_analyst/: __init__.py  _helpers.py  agent.md  backstory.md  curation.py  description.md  discovery.py  enrichment.py  expected_output.md  goal.md  role.md
squad/osint_analyst/recon/: description.md  (+1 more)
squad/penetration_tester/: __init__.py  _decorator.py  agent.md  backstory.md  cloud.py  description.md  expected_output.md  findings.py  goal.md  probes.py  prompt.md  recon.py
squad/programme_manager/: __init__.py  agent.md  backstory.md  description.md  expected_output.md  goal.md  retrospective_description.md  retrospective_expected_output.md  role.md
squad/technical_author/: __init__.py  agent.md  backstory.md  description.md  expected_output.md  goal.md  prompt.md  role.md
squad/vulnerability_researcher/: __init__.py  _decorator.py  agent.md  backstory.md  description.md  expected_output.md  goal.md  prompt.md  research.py  role.md  triage.py  triage_description.md  triage_expected_output.md
tests/: conftest.py  test_approval.py  test_cloud.py  test_cmd_injection.py  test_config.py  test_cookies.py  test_crew.py  test_csrf.py  test_cwe_data.py  test_databases.py  test_dc_args_schemas.py  test_dnsx.py  test_errors.py  test_h1_api.py  test_header_xss.py  test_hpp.py  test_html.py  test_http.py  test_idor.py  test_jwt.py  test_ldap_injection.py  test_ledger.py  test_main.py  test_mcp_servers.py  test_metrics.py  test_models.py  test_nosql.py  test_open_redirect.py  test_osint_args_schemas.py  test_owasp_data.py  test_path_traversal.py  test_pentest_args_schemas.py  test_pm_args_schemas.py  test_prompt_injection.py  test_prototype_pollution.py  test_pt_args_schemas.py  test_recon_insights.py  test_recon_query.py  test_recon_tools.py  test_report_tools.py  (+30 more)
tests/bdd/: test_programme_manager.py
tests/features/: programme_manager.feature
tests/fixtures/: domains.py  findings.py  programme.py  recon.py  responses.py  tools.py
tests/models/: test_asset.py  test_attack.py  test_briefing.py  test_finding.py  test_h1.py  test_insight.py  test_network.py  test_primitives.py
tests/squad/: _contract_assertions.py
tests/tools/: test_cpe.py  test_cwe_data.py  test_h1_api.py  test_html.py  test_http.py  test_metrics.py  test_nvd.py  test_owasp_data.py  test_recon_host_store.py  test_recon_insights.py  test_report_tools.py  test_research_tools.py  test_research_vocab.py  test_triage_tools.py  test_webpage.py  test_workspace.py
tools/: _helpers.py  approval.py  cpe.py  cwe_data.py  h1_api.py  html.py  http.py  ledger.py  metrics.py  nvd.py  owasp_data.py  recon_host_store.py  recon_insights.py  recon_tools.py  report_tools.py  research_tools.py  research_vocab.py  suggestion_box.py  triage_tools.py  vuln_tools.py  workspace.py
tools/cloud/: __init__.py  aws.py  azure.py  services.py
tools/pentest/: __init__.py  _stamps.py  canary.py  cloud.py  cmd_injection.py  cookies.py  cors.py  csrf.py  errors.py  framework.py  header_xss.py  hpp.py  idor.py  jwt.py  ldap_injection.py  nosql.py  nosqli.py  nuclei.py  open_redirect.py  owasp.py  path_traversal.py  prompt_injection.py  prototype_pollution.py  service.py  sourcemaps.py  sqlmap.py  sri.py  ssrf.py  ssti.py  triage.py  webapp_headers.py  xss.py  xxe.py
tools/recon/: __init__.py  asn.py  cert_transparency.py  dirfuzz.py  dns_assets.py  dnsx.py  httpx.py  ip_asset.py  ip_enrichment.py  ip_graph.py  llm.py  nmap.py  probe.py  query.py  rdap.py  rdap_assets.py  scope.py  subfinder.py  technology.py  tls.py  traceroute.py  waybackurls.py
tools/tui/: __init__.py  _helpers.py
tools/workspace/: __init__.py
(+140 files in other folders)
