[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersquad"
version = "0.1.0"
description = "Autonomous bug bounty pipeline powered by CrewAI"
requires-python = ">=3.12"
dependencies = [
    "crewai[anthropic]>=0.80.0",
    "crewai-tools>=0.15.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12,<5.0",
    "dnspython>=2.6",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-bdd>=7.2",
    "respx>=0.21",          # mock httpx/requests at transport level

    # Linting & formatting
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.32",
    "types-beautifulsoup4>=4.12",

    # SAST
    "bandit[toml]>=1.7",
    "semgrep>=1.75",
]

[project.scripts]
bounty-squad = "main:main"

[tool.setuptools]
packages = ["tools"]
py-modules = ["config", "models", "tasks", "crew", "main", "runtime"]

# -- pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "unit: fast, no I/O, no external calls",
    "integration: hits real APIs or binaries (skipped in CI by default)",
    "bdd: behaviour scenarios exercising agent reasoning against a real LLM (slow, costs tokens)",
]
bdd_features_base_dir = "tests/features"

# -- coverage ------------------------------------------------------------------

[tool.coverage.run]
source = ["."]
# tools/tui/__init__.py is the Textual App + widget + threading layer and
# needs a textual.pilot harness to exercise; tracked as debt to remove this
# omit once the harness lands. Pure helpers live in tools/tui/_helpers.py
# (branch-cov 100%) and the thin app-binding tui.py is covered directly.
omit = ["tests/*", ".venv/*", "tools/tui/__init__.py"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# -- ruff ----------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (common footguns)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modernise syntax)
    "S",    # flake8-bandit (security - basic layer)
    "ANN",  # flake8-annotations (type hints)
]
ignore = [
    "S101",    # use of assert (fine in tests)
    "S603",    # subprocess call - we call binaries intentionally
    "S607",    # partial path in subprocess - binaries found via shutil.which
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]   # relax annotations and security rules in tests
# Thin pass-through wrappers around requests.* - **kwargs: Any is the
# idiomatic shape, and the timeout argument is part of the caller's contract,
# not the helper's responsibility to default.
"tools/http.py" = ["ANN401", "S113"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -- mypy ----------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = false                 # enable gradually; flip per-module as coverage grows
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true  # crewai stubs aren't published yet
disallow_untyped_defs = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -- bandit --------------------------------------------------------------------

[tool.bandit]
targets = ["."]
exclude_dirs = ["tests", ".venv"]
skips = [
    "B404",  # import subprocess - we use it intentionally for binary wrappers
    "B603",  # subprocess without shell=True - correct, we never use shell=True
    "B607",  # partial executable path - resolved via shutil.which before call
]
severity = "medium"
confidence = "medium"
