[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersquad"
version = "0.1.0"
description = "Autonomous bug bounty pipeline powered by CrewAI"
requires-python = ">=3.12"
dependencies = [
    "crewai[anthropic]>=1.14.0",
    "crewai-tools>=0.15.0",
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12,<5.0",
    "dnspython>=2.6",
    # email-validator is the canonical Python email validator (the same
    # library Pydantic's EmailStr uses under the hood). Used by the
    # ``Email`` primitive in models.primitives - keeps the typed-str
    # primitive pattern consistent with FQDN / IPAddress / HttpUrl.
    "email-validator>=2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
    # CPE (Common Platform Enumeration) parsing + binding normalisation.
    # nmap -sV emits the legacy CPE 2.2 URI binding (cpe:/a:...); this
    # library converts it to the canonical CPE 2.3 formatted string so the
    # typed ``cpe`` fields and the VR's CVE lookup speak one binding.
    # NOTE: LGPLv3 - the repo's first copyleft dependency. Imported as a
    # library only (no modification / static linking), so the obligations
    # are light, but flagging it for the licence record.
    "cpe>=1.3",
    # CVSS vector parsing + base-score + severity, the canonical RedHat
    # implementation of the CVSS spec. Replaces the hand-derived CVSS 3.1
    # formula in tools/report_tools.calculate_cvss_score and backs the
    # ``CvssVector`` primitive's validation in models.nvd. Pure-Python, zero
    # runtime deps. NOTE: LGPLv3+ (same copyleft posture as ``cpe`` above) -
    # imported as a library only, flagged for the licence record.
    "cvss>=3.4",
]

[project.optional-dependencies]
# Provisioned MCP servers - see the cybersquad-mcp contributor skill and
# `mcp_servers.py`. Each server is gated by its own `CYBERSQUAD_MCP_*_ENABLED`
# env var defaulting `false`, so installing the extra is a separate decision
# from turning the server on.
#
# Versions are pinned EXACTLY (==) deliberately. The MCP spec treats every
# tool's name, description, and inputSchema as untrusted input to the agent
# (modelcontextprotocol/spec 2025-06-18, basic/index "Security and Trust &
# Safety"). A vendor minor / patch bump can re-word those fields. Bumping a
# pin here is therefore a review event - the cybersquad-mcp skill spells
# out the upgrade ritual (re-vet tool prose; refresh allowlist if the
# vendor added a tool).
mcp = [
    # crewai-tools' MCPServerAdapter depends on `mcpadapt`, shipped under the
    # `[mcp]` extra. Without it, `MCPServerAdapter.__init__` aborts with an
    # interactive `click.confirm` install prompt the moment any provisioned
    # MCP is constructed - a non-TTY environment (CI, web session, daemon)
    # then crashes the host. Pull the extra explicitly so the dependency is
    # declared, not inferred from "we installed crewai-tools and hoped".
    "crewai-tools[mcp]>=1.14.5",
    # The official Anthropic reference time server.
    # Source: https://github.com/modelcontextprotocol/servers/tree/main/src/time
    "mcp-server-time==2026.1.26",
]
dev = [
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-bdd>=7.2",
    "respx>=0.21",          # mock httpx/requests at transport level
    "diff-cover>=9.0",      # per-PR coverage ratchet on top of fail_under (#98)

    # Linting & formatting
    "ruff>=0.4",
    "mypy>=1.10",
    "pylint>=4.0",
    "types-requests>=2.32",
    "types-beautifulsoup4>=4.12",

    # SAST
    "bandit[toml]>=1.7",
    "semgrep>=1.75",
]

[project.scripts]
bounty-squad = "main:main"

[tool.setuptools]
packages = ["tools", "mcp_servers"]
py-modules = ["config", "models", "tasks", "crew", "main", "runtime"]

# -- pytest --------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib import mode lets test files share basenames across subdirs
# (tests/squad/programme_manager/test_tools.py and tests/squad/
# disclosure_coordinator/test_tools.py) without forcing an __init__.py
# in every subdir. The default "prepend" mode collides on duplicate
# basenames; "importlib" is the modern pytest recommendation for
# nested test layouts. pythonpath is required because importlib mode
# does not implicitly prepend the rootdir to sys.path.
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--import-mode=importlib",
]
markers = [
    "unit: fast, no I/O, no external calls",
    "integration: hits real APIs or binaries (skipped in CI by default)",
    "bdd: behaviour scenarios exercising agent reasoning against a real LLM (slow, costs tokens)",
]
bdd_features_base_dir = "tests/features"

# -- coverage ------------------------------------------------------------------

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# -- ruff ----------------------------------------------------------------------

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear (common footguns)
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (modernise syntax)
    "S",    # flake8-bandit (security - basic layer)
    "ANN",  # flake8-annotations (type hints)
    "RUF",  # ruff-specific (catches stale noqa, unsorted __all__, mutable defaults)
]
ignore = [
    "S101",    # use of assert (fine in tests)
    "S603",    # subprocess call - we call binaries intentionally
    "S607",    # partial path in subprocess - binaries found via shutil.which
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]   # relax annotations and security rules in tests
# Thin pass-through wrappers around requests.* - **kwargs: Any is the
# idiomatic shape, and the timeout argument is part of the caller's contract,
# not the helper's responsibility to default.
"tools/http.py" = ["ANN401", "S113"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -- mypy ----------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = false                 # enable gradually; flip per-module as coverage grows
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true  # crewai stubs aren't published yet
disallow_untyped_defs = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# -- pylint --------------------------------------------------------------------
# Scoped to the "this is getting monolithic, split it" rule family. Everything
# else is off so the signal stays focused. Expand the enable list later if we
# want pylint's other checks (similar-code, score, etc.) on top.

[tool.pylint.main]
recursive = true
ignore = [".venv"]
ignore-paths = ["tests/.*"]
# Locks the current design-rule health (full-repo score ~9.91; the
# agent-orchestration layer alone scores ~9.97) with a small epsilon
# for typo-grade noise. A new C0302 file-too-big suppression or a
# handful of new R0913 / R0914 functions slipping in fails CI - either
# fix the underlying smell or raise this knob deliberately.
fail-under = 9.88

[tool.pylint."messages control"]
disable = ["all"]
enable = [
    "C0302",  # too-many-lines (module)
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "R0915",  # too-many-statements
    "R0917",  # too-many-positional-arguments
    "R0902",  # too-many-instance-attributes
    "R0904",  # too-many-public-methods
    "R1702",  # too-many-nested-blocks
]

[tool.pylint.format]
max-module-lines = 500

# -- bandit --------------------------------------------------------------------

[tool.bandit]
targets = ["."]
exclude_dirs = ["tests", ".venv"]
skips = [
    "B404",  # import subprocess - we use it intentionally for binary wrappers
    "B603",  # subprocess without shell=True - correct, we never use shell=True
    "B607",  # partial executable path - resolved via shutil.which before call
]
severity = "medium"
confidence = "medium"
